--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
         </div>
         <div id="personal">
-            <h1>Alexandro Yaranga Espinoza</h1>
-            <img src="img/yo.jpg" alt="EDR">
-            <p>Hola soy alumno del curso Diseño Web</p>
+            <h1>Alexandro Yaranga </h1>
+            <img src="img/yo.jpg"EDR">
+            <p>Hola soy Alumno del curso Diseño Web</p>
         </div>
         <hr>
         <div id="tareas">
