--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="tareas">
             <p>Mis Actividades</p>
             <ul>
-                <li><a href="alexandroye12.github.ios/index.html">Tarea 04</a></li>
+                <li><a href="Sesion04/index.html">Tarea 04</a></li>
                 <li><a href="tarea05/index.html">Tarea 05</a></li>
                 <li><a href="#">Tarea 06</a></li>
                 <li><a href="#">Tarea 07</a></li>
